parser/src/parser/snapshots/parser__parser__pattern__tests__parse_placeholder_pattern.snap
---
source: parser/src/parser/pattern.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 17)
  FN_DEF@[0; 17)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 14)
      L_PAREN@[7; 8) "("
      PARAM@[8; 13)
        PLACEHOLDER_PAT@[8; 9)
          UNDERSCORE@[8; 9) "_"
        COLON@[9; 10) ":"
        IDENT_TYPE@[10; 13)
          IDENT@[10; 13) "i32"
      R_PAREN@[13; 14) ")"
    WHITESPACE@[14; 15) " "
    BLOCK_EXPR@[15; 17)
      BLOCK@[15; 17)
        L_CURLY@[15; 16) "{"
        R_CURLY@[16; 17) "}"

